# sleeper-mcp-server

./: .gitignore  README.md  pyproject.toml
.kiro/specs/sleeper-mcp-server/: design.md  requirements.md  tasks.md
docs/superpowers/plans/: 2026-06-29-sleeper-mcp-refresh-fastmcp.md
docs/superpowers/specs/: 2026-06-29-sleeper-mcp-refresh-design.md
sleeper_mcp_server/: __init__.py  __main__.py  cache.py  external_data.py  models.py  nfl_state.py  server.py  sleeper_client.py
sleeper_mcp_server/tools/: __init__.py  commissioner_tools.py  league_tools.py  matchup_tools.py  player_tools.py  trade_tools.py
sleeper_mcp_server/utils/: __init__.py  commissioner_evaluator.py  trade_analyzer.py
tests/: __init__.py  test_models.py  test_models_previous_league_id.py  test_nfl_state.py  test_player_tools.py  test_projections.py  test_server_integration.py
